--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-boilerplate",
-  "productName": "Open Source in Finance Forum New York | Linux Foundation Events",
+  "productName": "osff",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "dist/app.js",
