--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/app.js",
   "scripts": {
     "build": "run-p build:*",
-    "build:ts": "sleep 2 && tsc -p ./tsconfig.json",
+    "build:ts": "tsc -p ./tsconfig.json",
     "build:stencil": "stencil build",
     "clean": "rimraf .stencil dist out",
     "package": "run-s clean package:*",
@@ -15,10 +15,11 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "start": "run-p start:*",
-    "start:electron": "sleep 3 && cross-env NODE_ENV=dev electron-forge start",
-    "start:ts": "sleep 2 && tsc -w -p ./tsconfig.json",
+    "start:electron": "cross-env NODE_ENV=dev electron-forge start",
+    "start:ts": "tsc -w -p ./tsconfig.json",
     "start:stencil": "stencil build --dev --watch",
-    "watch": "run-s start"
+    "watch": "run-s start",
+    "wdio": "wdio run ./wdio.conf.ts"
   },
   "keywords": [],
   "author": {
@@ -29,7 +30,8 @@
   "dependencies": {
     "@stencil/core": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
-    "semver-regex": "^4.0.5"
+    "semver-regex": "^4.0.5",
+    "sleep": "^6.3.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
@@ -38,11 +40,16 @@
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@types/electron-squirrel-startup": "^1.0.0",
+    "@wdio/cli": "^8.27.0",
+    "@wdio/local-runner": "^8.27.0",
+    "@wdio/mocha-framework": "^8.27.0",
+    "@wdio/spec-reporter": "^8.27.0",
     "cross-env": "^7.0.3",
     "electron": "27.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "wdio-electron-service": "^6.0.2"
   }
 }
